siosifm_dev_win32/examples/common/siosifmdll.h

#define DLLFUNC extern "C" __declspec(dllexport)
#define DLLFUNC extern "C" __declspec(dllimport)
typedef int int32;
typedef unsigned int uint32;
typedef long long int64;
typedef unsigned long long int_p;
#define DLLFUNC extern "C" __declspec(dllexport)
#define DLLFUNC extern "C" __declspec(dllimport)
typedef int int32;
typedef unsigned int uint32;
typedef int int_p;
typedef __int64 int64;
typedef long long int64;
// Linux
#define DLLFUNC
typedef int int32;
typedef unsigned int uint32;
typedef long long int64;
typedef long int_p;
typedef int int_p;
/* Open a device
   returns a handle for the device, the "devNumber"
*/
DLLFUNC int32 IfmOpenUSB(int32 uniqueId);
DLLFUNC int32 IfmOpenCOM(int32 comNumber);
DLLFUNC int32 IfmOpenCOM(const char *devName);
/*
 The function IfmUSBDeviceCount returns
 the count of devices on the USB-bus without a new search
*/
DLLFUNC int32 IfmUSBDeviceCount();
/*
  The function IfmUSBDeviceSerial returns the
 USB-serial number of the requested device; 0<=uniqueId<IfmUSBDeviceCount()
*/
DLLFUNC int32 IfmUSBDeviceSerial(int32 uniqueId);
/*
The function IfmMaxDeviceCount returns the count of maximum allowable devices
*/
DLLFUNC int32 IfmMaxDeviceCount();
/*
The function IfmDeviceCount returns the count of the open devices
*/
DLLFUNC int32 IfmDeviceCount();
// checks, if the devNumber is a valid device id
DLLFUNC int32 IfmDeviceValid(int32 devNumber);
// returns the version number of the firmware
DLLFUNC int32 IfmFirmwareVersion(int32 devNumber);
// returns the count of channels
DLLFUNC int32 IfmChannels(int32 devNumber);
// returns the type of the device, currently only RE10-cards are supported
DLLFUNC int32 IfmDeviceType(int32 devNumber);
// to which interface is the device connected ? RS232, USB od Network
DLLFUNC int32 IfmDeviceInterface(int32 devNumber);
// to ask for specific properties (defiened in siosifmdef.h)
DLLFUNC int32 IfmHasDeviceProperty(int32 devNumber, int32 porpertyNumber);
/*
IfmDeviceInfo returns required information, if it is available, otherwise it returns 0
Befor this function will be called, the device should be opened (IfmOpenCOM, IfmOpenUSB)
*/
DLLFUNC int_p IfmDeviceInfo(int32 devNumber, int32 requestedInfo);
//some of the device infos can also be set
DLLFUNC int32 IfmSetDeviceInfo(int32 devNumber, int32 requestedInfo, int32 newValue);
/*
IfmResetDevice causes the software reset of the according card
Alike after hardware reset, the device stops after this command all running processes and
breaks all connections. The USB-interface have to be reinitialized and
the device have to be reconfigured by user again.
*/
DLLFUNC void IfmResetDevice(int32 devNumber);
/*
The command IfmUpdateDevice causes the update-mode of the card.
Attention!!! After starting of the update-mode it is not possible without
the firmware - upgrade to set back the device to the run-mode.
A SIOS-bootloader software should be applied for the upgrading.
*/
DLLFUNC void IfmUpdateDevice(int32 devNumber);
/*
IfmSaveConfigDevice is command for the saving of the actual measuring settings into the flash.
After the next device reset the saved parameter will be applied
For an explanation of the measuring settings see the function IfmSetMeasurement
*/
DLLFUNC void IfmSaveConfigDevice(int32 devNumber);//Aktuelle Eunstellungen von Page0 in den Flash speichern
/*
IfmSetTrigger is command for the settings of trigger conditions.
This settings have to be made before the command IfmSetMeasurement
For the meaning of flags see the file siosifmdef.h
*/
DLLFUNC int32 IfmSetTrigger(int32 devNumber, uint32 triggerMode);
/*
IfmFireTrigger requests one measuring value
*/
DLLFUNC int32 IfmFireTrigger(int32 devNumber);
/*
IfmSetFilter is command for the setting of the averaging filter one and two.
If the values avr1 or avr2 are equal 0, will be the corresponding filter deactivated.
Please note the settings of the mesurementFlags in the function IfmSetMeasurement.
For the settings of  filterFlags see siosifmdef.h
*/
DLLFUNC int32 IfmSetFilter(int32 devNumber, uint32 filterFlags,int32 avg1, int32 avg2);
/*
IfmSetFilterCoeff is the function for the setting of the FIR-filter coefficients.
This command should be applied for every of available channels
*/
DLLFUNC int32 IfmSetFilterCoeff(int32 devNumber, int32 channel, double coeff);
/*
IfmGetFilterCoeff is the function for the requiring
of the FIR-filter coefficient for the corresponding device and channel.
The values will be activated by the IfmSetMeasurement function
*/
DLLFUNC double IfmGetFilterCoeff(int32 devNumber, int32 channel);
/*
Sets the notch frequency of the internal filter. A frequency of 0.0 means, that the
frequency of the reference mirror vibrator should be notched out.
This function is equivalent to IfmSetFilterCoeff but calculates the appropriate coeff based on the given frequency.
*/
DLLFUNC int32 IfmSetFilterNotchFrequency(int32 devNumber, int32 channel, double freq);
/*
Returns the notch frequency, which wre set with IfmSetFilterNotchFrequency.
The function delivers valid values AFTER IfmSetMeasurement was called
*/
DLLFUNC double IfmGetFilterNotchFrequency(int32 devNumber, int32 channel);
/*
Sets the "dead path" in mm for the environment correction.
The dead path is the distance from the sensor head to the zero position.
Because during this distance the laser beam is also influenced by changing in air refraction
it must be considered with the envirnonment correction even the distance plays no role in the
measurement itself.

ATTENTION!!! The dead path is taken over into the calculation with defining the Zero-Position (IfmSetToZero).
Therefore, IfmSetDeadPath must always be called before IfmSetToZero!

 */
DLLFUNC int32 IfmSetDeadPath(int32 devNumber,int32 channel, int32 deadPath);
/* IfmGetDeadpath returns the active dead path for the given channel in mm
   Because the dead path is set during IfmSetToZero and the dead path can be changed
   in the interferometer (for instance in LaserTracers) the returned value may be
   different from the value set with IfmSetDeadpath

   The dead path is always positive. A negative return value is an error number and indicates an error.

 */

DLLFUNC int32 IfmGetDeadPath(int32 devNumber, int32 channel);
/*
The function IfmSetMeasurementRawValues alike IfmSetMeasurement.
But the filter settings will be ignored here. It means the sampe frequency and the output word rate are equal
*/
//DLLFUNC int32 IfmSetMeasurementRawValues(int32 devNumber,unsigned int32 measurementFlags, int32 outputWordRate);

/*
The command IfmSetMeasurement is for the setting of measurement parameters like trigger conditions, filtering: on/off,
measuring value and output word rate.
For the settings of measurementFlags see siosifmdef.h
*/
DLLFUNC int32 IfmSetMeasurement(int32 devNumber,uint32 measurementFlags, double outputWordRate);
/*
The function for the erasing of the PC-input buffer
*/
DLLFUNC int32 IfmClearBuffers(int32 devNumber);
/*
The command IfmStart is for the measurement start.
The measurement starts with the actual measurement parameter.
See commands IfmSaveConfigDevice and IfmSetMeasurement for the detailed information.
*/
DLLFUNC int32 IfmStart(int32 devNumber);
/*
The command IfmStop for the measurement stop.
*/
DLLFUNC int32 IfmStop(int32 devNumber);
/*
The function IfmValueCount return the count of values, which are in the input puffer available.
*/
DLLFUNC int32 IfmValueCount(int32 devNumber);
/*
The function IfmGetValues read out the mesuring values from the input buffer according to FIFO (first in first out) principle.
*/
DLLFUNC int32 IfmGetValues(int32 devNumber);
/*
The function IfmGetRecentValues reads out the (count-index-1) mesuring values from the input buffer.
*/
DLLFUNC int32 IfmGetRecentValues(int32 devNumber, int32 index);
//IfmDataStruct *IfmValue(int32 devNumber);

/*

*/
DLLFUNC int64 IfmRawValue(int32 devNumber,int32 channel);
/*
The function IfmLengthValue read out the length mesuring values.
It is to use directly after the function IfmGetValues
*/
DLLFUNC double IfmLengthValue(int32 devNumber,int32 channel);
DLLFUNC int32 IfmAuxValue(int32 devNumber,int32 channel,int32 valueType);
// gives back the angle between two channels if they are linked
// the angle is calculated via the difference channel1 - channel2
// with interchange the channels the sign of the angle is inverted
// Attention: channel numbers must be given by with the IFM_CHANNEL1 - IFM_CHANNEL4 constants
// NOT with integer numbers
// if unit = 0 the unit is mrad, otherwise seconds
DLLFUNC double IfmAngleValue(int32 devNumber, int32 channel1, int32 channel2, int32 unit);
// return 1 if the channels, defined in channelmask are linked and
// an angle between these channels can be calculated
DLLFUNC int32 IfmAngleAvailable(int32 devNumber,int32 channelMask);
DLLFUNC uint32 IfmStatus(int32 devNumber,int32 channel);
// Block mode
DLLFUNC int32 IfmSetBlockModeFilter(int32 devNumber, uint32 filterFlags,int32 avg1, int32 avg2);
DLLFUNC int32 IfmSetBlockModeFilterCoeff(int32 devNumer, int32 channel, double coeff);
// not yet implemented, coming later
//DLLFUNC int32 IfmSetBlockModeFilterNotchFrequency(int32 devNumer, int32 channel, double frequency);
DLLFUNC int32 IfmSetBlockMode(int32 devNumber,int32 measurementFlags,int32 triggerMode, int32 outputWordRate);
DLLFUNC int32 IfmStartBlock(int32 devNumber, int32 blockLen);
DLLFUNC int32 IfmIsBlockAvailable(int32 devNumber);
DLLFUNC int32 IfmCancelBlock(int32 devNumber);
// Functions for controling the interferometer
/*
Command IfmSetRefMirrorVibration for setting on the mirror vibration
*/
DLLFUNC int32 IfmSetRefMirrorVibration(int32 devNumber,int32 channel, int32 on);
DLLFUNC int32 IfmSetAGC(int32 devNumber,int32 channel, int32 on);
DLLFUNC int32 IfmGetAGC(int32 devNumber,int32 channel);
// enhanced functions for service tasks, do not use
DLLFUNC int32 IfmExtAGCStatus(int32 devNumber, int32 channel);
DLLFUNC int32 IfmSaveAGCStatus(int32 devNumber, int32 channel);
// sets the dead path, the preset values, clears the overlow and beambreak flags
// and clears the interferometer counter
DLLFUNC int32 IfmSetToZero(int32 devNumber,int32 channelMask);