siosifm_dev_win32/python/siosifm.py


#The function IfmUSBDeviceSerial returns the
#USB-serial number of the requested device; 0<=uniqueId<IfmUSBDeviceCount()

IfmUSBDeviceSerial = ifmdll.IfmUSBDeviceSerial
IfmUSBDeviceSerial.argtypes = [c_int]
IfmUSBDeviceSerial.restype = c_int


#The function IfmMaxDeviceCount returns the count of maximum allowable devices

IfmMaxDeviceCount = ifmdll.IfmMaxDeviceCount
IfmMaxDeviceCount.restype = c_int


#The function IfmDeviceCount returns the count of the open devices

IfmDeviceCount = ifmdll.IfmDeviceCount
IfmDeviceCount.restype = c_int


#checks, if the devNumber is a valid device id

IfmDeviceValid = ifmdll.IfmDeviceValid
IfmDeviceValid.argtypes = [c_int]
IfmDeviceValid.restype = c_int


#returns the version number of the firmware

IfmFirmwareVersion = ifmdll.IfmFirmwareVersion
IfmFirmwareVersion.argtypes = [c_int]
IfmFirmwareVersion.restype = c_int


#returns the count of channels

IfmChannels = ifmdll.IfmChannels
IfmChannels.argtypes = [c_int]
IfmChannels.restype = c_int


#returns the type of the device, currently only RE10-cards are supported

IfmDeviceType = ifmdll.IfmDeviceType
IfmDeviceType.argtypes = [c_int]
IfmDeviceType.restype = c_int


#to which interface is the device connected ? RS232, USB od Network

IfmDeviceInterface = ifmdll.IfmDeviceInterface
IfmDeviceInterface.argtypes = [c_int]
IfmDeviceInterface.restype = c_int


#to ask for specific properties (defined in siosifmdef.h)

IfmHasDeviceProperty = ifmdll.IfmHasDeviceProperty
IfmHasDeviceProperty.argtypes = [c_int, c_int]
IfmHasDeviceProperty.restype = c_int



#IfmDeviceInfo returns required information, if it is available, otherwise it returns 0
#Befor this function will be called, the device should be opened (IfmOpenCOM, IfmOpenUSB)

IfmDeviceInfo = ifmdll.IfmDeviceInfo
IfmDeviceInfo.argtypes = [c_int, c_int]
IfmDeviceInfo.restype = c_int


#some of the device infos can also be set

IfmSetDeviceInfo = ifmdll.IfmSetDeviceInfo
IfmSetDeviceInfo.argtypes = [c_int, c_int, c_int]
IfmSetDeviceInfo.restype = c_int

#IfmResetDevice causes the software reset of the according card
#Alike after hardware reset, the device stops after this command all running processes and
#breaks all connections. The USB-interface have to be reinitialized and
#the device have to be reconfigured by user again.

IfmResetDevice = ifmdll.IfmResetDevice
IfmResetDevice.argtypes = [c_int]


#The command IfmUpdateDevice causes the update-mode of the card.
#Attention!!! After starting of the update-mode it is not possible without
#the firmware - upgrade to set back the device to the run-mode.
#A SIOS-bootloader software should be applied for the upgrading.

IfmUpdateDevice = ifmdll.IfmUpdateDevice
IfmUpdateDevice.argtypes = [c_int]


#IfmSaveConfigDevice is command for the saving of the actual measuring settings into the flash.
#After the next device reset the saved parameter will be applied
#For an explanation of the measuring settings see the function IfmSetMeasurement

#Aktuelle Eunstellungen von Page0 in den Flash speichern
IfmSaveConfigDevice = ifmdll.IfmSaveConfigDevice
IfmSaveConfigDevice.argtypes = [c_int]


#IfmSetTrigger is command for the settings of trigger conditions.
#This settings have to be made before the command IfmSetMeasurement
#For the meaning of flags see the file siosifmdef.h

IfmSetTrigger = ifmdll.IfmSetTrigger
IfmSetTrigger.argtypes = [c_int, c_uint]
IfmSetTrigger.restype = c_int


#IfmFireTrigger requests one measuring value

IfmFireTrigger = ifmdll.IfmFireTrigger
IfmFireTrigger.argtypes = [c_int]
IfmFireTrigger.restype = c_int


#IfmSetFilter is command for the setting of the averaging filter one and two.
#If the values avr1 or avr2 are equal 0, will be the corresponding filter deactivated.
#Please note the settings of the mesurementFlags in the function IfmSetMeasurement.
#For the settings of  filterFlags see siosifmdef.h

IfmSetFilter = ifmdll.IfmSetFilter
IfmSetFilter.argtypes = [c_int, c_uint, c_int, c_int]
IfmSetFilter.restype = c_int


#IfmSetFilterCoeff is the function for the setting of the FIR-filter coefficients.
#This command should be applied for every of available channels

IfmSetFilterCoeff = ifmdll.IfmSetFilterCoeff
IfmSetFilterCoeff.argtypes = [c_int, c_int, c_double]
IfmSetFilterCoeff.restype = c_int


#IfmGetFilterCoeff is the function for the requiring
#of the FIR-filter coefficient for the corresponding device and channel.
#The values will be activated by the IfmSetMeasurement function

IfmGetFilterCoeff = ifmdll.IfmGetFilterCoeff
IfmGetFilterCoeff.argtypes = [c_int, c_int]
IfmGetFilterCoeff.restype = c_double


#Sets the notch frequency of the internal filter. A frequency of 0.0 means, that the
#frequency of the reference mirror vibrator should be notched out.
#This function is equivalent to IfmSetFilterCoeff but calculates the appropriate coeff based on the given frequency.

IfmSetFilterNotchFrequency = ifmdll.IfmSetFilterNotchFrequency
IfmSetFilterNotchFrequency.argtypes = [c_int, c_int, c_double]
IfmSetFilterNotchFrequency.restype = c_int


#Returns the notch frequency, which wre set with IfmSetFilterNotchFrequency.
#The function delivers valid values AFTER IfmSetMeasurement was called

IfmGetFilterNotchFrequency = ifmdll.IfmGetFilterNotchFrequency
IfmGetFilterNotchFrequency.argtypes = [c_int, c_int]
IfmGetFilterNotchFrequency.restype = c_double


#Sets the "dead path" in mm for the environment correction.
#The dead path is the distance from the sensor head to the zero position.
#Because during this distance the laser beam is also influenced by changing in air refraction
#it must be considered with the envirnonment correction even the distance plays no role in the
#measurement itself.

#ATTENTION!!! The dead path is taken over into the calculation with defining the Zero-Position (IfmSetToZero).
#Therefore, IfmSetDeadPath must always be called before IfmSetToZero!

IfmSetDeadPath = ifmdll.IfmSetDeadPath
IfmSetDeadPath.argtypes = [c_int, c_int, c_int]
IfmSetDeadPath.restype = c_int


#IfmGetDeadpath returns the active dead path for the given channel in mm
#Because the dead path is set during IfmSetToZero and the dead path can be changed
#in the interferometer (for instance in LaserTracers) the returned value may be
#different from the value set with IfmSetDeadpath

#The dead path is always positive. A negative return value is an error number and indicates an error.

IfmGetDeadPath = ifmdll.IfmGetDeadPath
IfmGetDeadPath.argtypes = [c_int, c_int]
IfmGetDeadPath.restype = c_int


#The function IfmSetMeasurementRawValues alike IfmSetMeasurement.
#But the filter settings will be ignored here. It means the sampe frequency and the output word rate are equal

# DLLFUNC int IfmSetMeasurementRawValues(int devNumber,unsigned int measurementFlags, int outputWordRate);
##IfmSetMeasurementRawValues = ifmdll.IfmSetMeasurementRawValues
##IfmSetMeasurementRawValues.argtypes = [c_int, c_uint, c_int]
##IfmSetMeasurementRawValues.restype = c_int


#The command IfmSetMeasurement is for the setting of measurement parameters like trigger conditions, filtering: on/off,
#measuring value and output word rate.
#For the settings of measurementFlags see siosifmdef.h

IfmSetMeasurement = ifmdll.IfmSetMeasurement
IfmSetMeasurement.argtypes = [c_int, c_uint, c_double]
IfmSetMeasurement.restype = c_int


#The function for the erasing of the PC-input buffer

IfmClearBuffers = ifmdll.IfmClearBuffers
IfmClearBuffers.argtypes = [c_int]
IfmClearBuffers.restpye = c_int


#The command IfmStart is for the measurement start.
#The measurement starts with the actual measurement parameter.
#See commands IfmSaveConfigDevice and IfmSetMeasurement for the detailed information.

IfmStart = ifmdll.IfmStart
IfmStart.argtypes = [c_int]
IfmStart.restype = c_int


#The command IfmStop for the measurement stop.

IfmStop = ifmdll.IfmStop
IfmStop.argtypes = [c_int]
IfmStop.restype = c_int


#The function IfmValueCount return the count of values, which are in the input puffer available.

IfmValueCount = ifmdll.IfmValueCount
IfmValueCount.argtypes = [c_int]
IfmValueCount.restype = c_int


#The function IfmGetValues read out the mesuring values from the input buffer according to FIFO (first in first out) principle.

IfmGetValues = ifmdll.IfmGetValues
IfmGetValues.argtypes = [c_int]
IfmGetValues.restype = c_int


#The function IfmGetRecentValues reads out the (count-index-1) mesuring values from the input buffer.

IfmGetRecentValues = ifmdll.IfmGetRecentValues
IfmGetRecentValues.argtypes = [c_int, c_int]
IfmGetRecentValues.restype = c_int


##IfmDataStruct *IfmValue(int devNumber);


IfmRawValue = ifmdll.IfmRawValue
IfmRawValue.argtypes = [c_int, c_int]
IfmRawValue.restype = c_longlong


#The function IfmLengthValue read out the length mesuring values.
#It is to use directly after the function IfmGetValues

IfmLengthValue = ifmdll.IfmLengthValue
IfmLengthValue.argtypes = [c_int, c_int]
IfmLengthValue.restype = c_double


IfmAuxValue = ifmdll.IfmAuxValue
IfmAuxValue.argtypes = [c_int, c_int, c_int]
IfmAuxValue.restype = c_int


#gives back the angle between two channels if they are linked
#the angle is calculated via the difference channel1 - channel2
#with interchange the channels the sign of the angle is inverted
#Attention: channel numbers must be given by with the IFM_CHANNEL1 - IFM_CHANNEL4 constants
#NOT with integer numbers
#if unit = 0 the unit is mrad, otherwise seconds

IfmAngleValue = ifmdll.IfmAngleValue
IfmAngleValue.argtypes = [c_int, c_int, c_int, c_int]
IfmAngleValue.restype = c_double


#return 1 if the channels, defined in channelmask are linked and
#an angle between these channels can be calculated

IfmAngleAvailable = ifmdll.IfmAngleAvailable
IfmAngleAvailable.argtypes = [c_int, c_int]
IfmAngleAvailable.restype = c_int


IfmStatus = ifmdll.IfmStatus
IfmStatus.argtypes = [c_int, c_int]
IfmStatus.restype = c_uint


#Block mode

IfmSetBlockModeFilter = ifmdll.IfmSetBlockModeFilter
IfmSetBlockModeFilter.argtypes = [c_int, c_uint, c_int, c_int]
IfmSetBlockModeFilter.restype = c_int

IfmSetBlockModeFilterCoeff = ifmdll.IfmSetBlockModeFilterCoeff
IfmSetBlockModeFilterCoeff.argtypes = [c_int, c_int, c_double]
IfmSetBlockModeFilterCoeff.restype = c_int


#not yet implemented, coming later

#DLLFUNC int IfmSetBlockModeFilterNotchFrequency(int devNumer, int channel, double frequency);
#IfmSetBlockModeFilterNotchFrequency = ifmdll.IfmSetBlockModeFilterNotchFrequency
#IfmSetBlockModeFilterNotchFrequency.argtypes = [c_int, c_int, c_double]
#IfmSetBlockModeFilterNotchFrequency.restype = c_int

IfmSetBlockMode = ifmdll.IfmSetBlockMode
IfmSetBlockMode.argtypes = [c_int, c_int, c_int, c_int]
IfmSetBlockMode.restype = c_int

IfmStartBlock = ifmdll.IfmStartBlock
IfmStartBlock.argtypes = [c_int, c_int]
IfmStartBlock.restype = c_int

IfmIsBlockAvailable = ifmdll.IfmIsBlockAvailable
IfmIsBlockAvailable.argtypes = [c_int]
IfmIsBlockAvailable.restype = c_int

IfmCancelBlock =ifmdll.IfmCancelBlock
IfmCancelBlock.argtypes = [c_int]
IfmCancelBlock.restype = c_int


#Functions for controling the interferometer

#Command IfmSetRefMirrorVibration for setting on the mirror vibration

IfmSetRefMirrorVibration = ifmdll.IfmSetRefMirrorVibration
IfmSetRefMirrorVibration.argtypes = [c_int, c_int, c_int]
IfmSetRefMirrorVibration.restype = c_int

IfmSetRefMirrorVibration = ifmdll.IfmSetRefMirrorVibration
IfmSetRefMirrorVibration.argtypes = [c_int, c_int]
IfmSetRefMirrorVibration.restype = c_int

IfmSetAGC = ifmdll.IfmSetAGC
IfmSetAGC.argtypes = [c_int, c_int, c_int]
IfmSetAGC.restype = c_int

IfmGetAGC = ifmdll.IfmGetAGC
IfmGetAGC.argtypes = [c_int, c_int]
IfmGetAGC.restype = c_int


#enhanced functions for service tasks, do not use

IfmExtAGCStatus = ifmdll.IfmExtAGCStatus
IfmExtAGCStatus.argtypes = [c_int, c_int]
IfmExtAGCStatus.restype = c_int

IfmSaveAGCStatus = ifmdll.IfmSaveAGCStatus
IfmSaveAGCStatus.argtypes = [c_int, c_int]
IfmSaveAGCStatus.restype = c_int

